--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     
     <title>総人口推移グラフ</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <link rel="stylesheet" type="text/css" href="./index.css" >
   </head>
   <body>
@@ -12,41 +14,49 @@
           <span class="top">総人口推移グラフ</span>
       </h1>
     </header>
+    <main>
     <div id="app">
-      <!-- {{ prefectures }}<br> -->
 
       <!-- チェックボックス -->
       <div class="panel">
-        <a v-for="(pre, i) in pre_lis">
-          <input type="checkbox" v-model="pre_code[i]">
-          {{pre.name}}
+        <a v-for="(item, i) in prefectures">
+          <span>
+            <input type="checkbox" v-model="pre_code[i]">
+            {{ item.prefName }}
+          </span>
         </a>
       </div>
 
       <!-- 選んだものを表示 -->
       <div class="panel">
-        <div v-for="(pre, i) in pre_lis">
+        <div v-for="(item, i) in prefectures">
           <div v-if ="pre_code[i]">
-            {{pre.name}}
-            {{ population }}
+            <!-- <script>this.pre_num.push('pre.id')</script> -->
+            <div v-bind:pre_num="item.id"></div>
+            <!-- {{pre.id}} -->
+            <!-- {{pre_num}} -->
+            {{i+1}}
+            {{item.prefName}}<br>
+            <!-- {{ population}}<br> -->
           </div>
         </div>
       </div>
 
+      <!-- 図を描く -->
+      <div id="app" style="width:100%">
+        <canvas id="myChart"></canvas>
+      </div>
+
+      <!-- {{pre_num}} -->
       <!-- {{selected}}<br> -->
       <!-- {{selected}}<br> -->
       <!-- <div>pre_code_l === {{pre_code_l}}</div> -->
       <!-- {{pre_code}}<br> -->
     </div>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./index.js"></script>
   </body>
   </html>
   
-  <!-- <label for="福岡">福岡</label>
-  <input type="checkbox" id=40 value="fukuoka" v-model="pre_code"/><br>
-  <input type="number" id="fukuoka" value=40 v-model="pre_code"/><br>
-  <label for="佐賀">佐賀</label>
-  <input type="checkbox" id=41 value="saga" v-model="pre_code" /><br>
-  <input type="text" v-model="pre_num" /><br> -->
