--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
       <div class="panel">
         <div v-for="(item, i) in prefectures">
           <div v-if ="pre_code[i]">
-            <!-- <script>this.pre_num.push('pre.id')</script> -->
             <div v-bind:pre_num="item.id"></div>
             {{i+1}}
             {{item.prefName}}<br>
-            <div v-for="item in population.data">
+            <!-- {{rev_population(13)}}<br> -->
+            <!-- {{rev_population(i)}}<br> -->
+            <!-- <p>{{ population }}</p> -->
+            <div v-for="item in rev_population(i)">
               {{item.year}}年
               {{item.value}}人<br>
             </div>
