グラフテンプレートの表示

--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
         </a>
       </div>
 
+      {{rev_population}}
+      {{sel_pre_code}}
       <!-- 図を描く -->
       <!-- <canvas id="myChart" ></canvas> -->
       <p><button @click="displayGraph">グラフ表示</button></p>
+      <p><button @click="clear">クリア</button></p>
       <canvas id="myChart" ></canvas>
       <!-- <canvas id="displayGraph" ></canvas> -->
 
