--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
         </a>
       </div>
 
+      <!-- <template v-for="item in rev_population(13)"> -->
+        <!-- {{item}} -->
+      <!-- </template> -->
       <!-- {{rev_population(13)}} -->
-      {{rev_data(1)}}<br>
-      {{sel_pre_code}}
+      <!-- {{rev_value(1)}}<br> -->
+      <!-- {{sel_pre_code}} -->
       <!-- 図を描く -->
       <!-- <canvas id="myChart" ></canvas> -->
       <p><button @click="displayGraph">グラフ表示</button></p>
